--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,13 +1,10 @@
-apiVersion: skaffold/v1alpha3
+apiVersion: skaffold/v1alpha4
 kind: Config
 build:
   artifacts:
-  - imageName: primary
-    workspace: ./primary/
-  # - imageName: gcr.io/k8s-skaffold/leeroy-app
-  #   workspace: net
+  - image: primary
+    context: ./primary/
 deploy:
   kubectl:
     manifests:
     - ./primary/kubernetes/*
-    # - ./net/kubernetes/*
