--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -6,11 +6,11 @@ build:
     context: ./primary/
   - image: handling
     context: ./handling/
-  # - image: processing
-  #   context: ./processing/
+  - image: processing
+    context: ./processing/
 deploy:
   kubectl:
     manifests:
     - ./primary/kubernetes/*
     - ./handling/kubernetes/*
-    # - ./processing/kubernetes/*
+    - ./processing/kubernetes/*
