--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,9 +8,12 @@ build:
     context: ./handling/
   - image: processing
     context: ./processing/
+  - image: displaying
+    context: ./displaying/
 deploy:
   kubectl:
     manifests:
     - ./primary/kubernetes/*
     - ./handling/kubernetes/*
     - ./processing/kubernetes/*
+    - ./displaying/kubernetes/*
