--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -2,18 +2,24 @@ apiVersion: skaffold/v1alpha4
 kind: Config
 build:
   artifacts:
-  - image: primary
-    context: ./primary/
-  - image: handling
-    context: ./handling/
-  - image: processing
-    context: ./processing/
-  - image: displaying
-    context: ./displaying/
+  - image: db
+    context: ./db/
+  # - image: primary
+  #   context: ./primary/
+  # - image: handling
+  #   context: ./handling/
+  # - image: processing
+  #   context: ./processing/
+  # - image: displaying
+  #   context: ./displaying/
+  - image: storing
+    context: ./storing/
 deploy:
   kubectl:
     manifests:
-    - ./primary/kubernetes/*
-    - ./handling/kubernetes/*
-    - ./processing/kubernetes/*
-    - ./displaying/kubernetes/*
+    - ./db/kubernetes/*
+    # - ./primary/kubernetes/*
+    # - ./handling/kubernetes/*
+    # - ./processing/kubernetes/*
+    # - ./displaying/kubernetes/*
+    - ./storing/kubernetes/*
