--- a/displaying/Dockerfile
+++ b/displaying/Dockerfile
@@ -11,6 +11,9 @@ ENV GOROOT /usr/local/go
 ENV GOBIN /usr/local/go/bin
 ENV GOPATH /go
 ENV PATH $PATH:/usr/local/go/bin
+
+RUN go get -u github.com/motemen/gore
+RUN go get -u github.com/d4l3k/go-pry
 RUN go get -u github.com/derekparker/delve/cmd/dlv
 
 WORKDIR /go/src
