--- a/web_app/Dockerfile
+++ b/web_app/Dockerfile
@@ -5,7 +5,8 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     ca-certificates \
     openssl \
     curl \
-    git-core
+    git-core \
+    postgresql-client
 
 ENV GOROOT /usr/local/go
 ENV GOBIN /usr/local/go/bin
@@ -13,8 +14,11 @@ ENV GOPATH /go
 ENV PATH $PATH:/usr/local/go/bin
 
 RUN go get -u github.com/derekparker/delve/cmd/dlv
+RUN go get -u github.com/jinzhu/gorm
+RUN go get -u github.com/lib/pq
+
 
 WORKDIR /go/src
 COPY . /go/src
-RUN go build -o displaying
-CMD ["./displaying"]
+RUN go build -o web_app
+CMD ["./web_app"]
