--- a/web-app/kubernetes/service.yaml
+++ b/web-app/kubernetes/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: web_app
+  name: web-app
   labels:
-    app: web_app
+    app: web-app
 spec:
   clusterIP: None
   ports:
     - port: 50006
       targetPort: 50006
       protocol: TCP
-      name: web_app
+      name: web-app
   selector:
-    app: web_app
+    app: web-app
