--- a/service/kubernetes/service.yaml
+++ b/service/kubernetes/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: db
+  name: service
   labels:
-    app: db
+    app: service
 spec:
   clusterIP: None
   ports:
-    - port: 5432
-      targetPort: 5432
+    - port: 50006
+      targetPort: 50006
       protocol: TCP
-      name: db
+      name: web-app
   selector:
-    app: db
+    app: service
