--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -2,6 +2,8 @@ apiVersion: skaffold/v1alpha4
 kind: Config
 build:
   artifacts:
+  - image: db
+    context: ./db/
   - image: primary
     context: ./primary/
   - image: handling
@@ -12,16 +14,15 @@ build:
     context: ./displaying/
   - image: storing
     context: ./storing/
-  - image: db
-    context: ./storing/db/
-  - image: web-app
-    context: ./web-app/
+  # - image: web-app
+  #   context: ./web-app/
 deploy:
   kubectl:
     manifests:
-    - ./primary/kubernetes/*
-    - ./handling/kubernetes/*
-    - ./processing/kubernetes/*
-    - ./displaying/kubernetes/*
-    - ./storing/kubernetes/*
-    - ./web-app/kubernetes/*
+    - ./db/k8s/*
+    - ./primary/k8s/*
+    - ./handling/k8s/*
+    - ./processing/k8s/*
+    - ./displaying/k8s/*
+    - ./storing/k8s/*
+    # - ./web-app/k8s/*
