--- a/test/k8s/deployment.yaml
+++ b/test/k8s/deployment.yaml
@@ -14,6 +14,10 @@ spec:
       labels:
         app: test
     spec:
+      initContainers:
+      - name: check-pg-isready
+        image: db
+        command: ['sh', '-c', 'until pg_isready -h db -p 5432; do echo waiting for database; sleep 2; done']
       containers:
       - name: test
         image: test
