--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -8,8 +8,8 @@ build:
   #   context: ./primary/
   # - image: handling
   #   context: ./handling/
-  # - image: processing
-  #   context: ./processing/
+  - image: processing
+    context: ./processing/
   # - image: displaying
   #   context: ./displaying/
   # - image: storing
@@ -26,7 +26,7 @@ deploy:
     # - ./db/k8s/*
     # - ./primary/k8s/*
     # - ./handling/k8s/*
-    # - ./processing/k8s/*
+    - ./processing/k8s/*
     # - ./displaying/k8s/*
     # - ./storing/k8s/*
     # - ./service/k8s/*
