--- a/storing/Dockerfile
+++ b/storing/Dockerfile
@@ -15,6 +15,7 @@ ENV PATH $PATH:/usr/local/go/bin
 
 RUN go get -u github.com/derekparker/delve/cmd/dlv
 RUN go get -u github.com/lib/pq
+RUN go get -u github.com/jinzhu/gorm
 
 
 WORKDIR /go/src
