--- a/primary/sidecar/fluentd/fluent.conf
+++ b/primary/sidecar/fluentd/fluent.conf
@@ -1,7 +1,9 @@
 <source>
-  @type http
-  port 9001
-  bind 0.0.0.0
+  @type tail
+  format none
+  path /var/log/primary.log
+  pos_file /var/log/primary.log.pos
+  tag primary.*
 </source>
 <match **>
   @type stdout
