--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -4,8 +4,8 @@ build:
   artifacts:
   # - image: db
   #   context: ./db/
-  # - image: monitor
-  #   context: ./monitor/
+  - image: monitor
+    context: ./monitor/
   # - image: dashboard
   #   context: ./dashboard/
   - image: primary
@@ -30,7 +30,7 @@ deploy:
   kubectl:
     manifests:
     # - ./db/k8s/*
-    # - ./monitor/k8s/*
+    - ./monitor/k8s/*
     # - ./dashboard/k8s/*
     - ./primary/k8s/*
     # - ./handling/k8s/*
