--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -30,7 +30,7 @@ deploy:
   kubectl:
     manifests:
     # - ./kubernetes/db/*
-    # - ./kubernetes/monitor*
+    - ./kubernetes/monitor*
     # - ./kubernetes/dashboard/*
     - ./kubernetes/primary/*
     # - ./kubernetes/handling/*
