--- a/k8s/primary/service.yaml
+++ b/k8s/primary/service.yaml
@@ -10,3 +10,6 @@ spec:
       protocol: TCP
       port: 50001
       targetPort: 50001
+    - name: primary-sidecar
+      protocol: TCP
+      port: 9001
