--- a/handling/k8s/service.yaml
+++ b/handling/k8s/service.yaml
@@ -2,14 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
   name: handling
-spec:
-  selector:
+  labels:
     app: handling
+spec:
+  clusterIP: None
   ports:
     - name: handling
       protocol: TCP
       port: 50002
       targetPort: 50002
-    - name: handling-sidecar
-      protocol: TCP
-      port: 9002
+  selector:
+    app: handling
