--- a/primary/k8s/service.yaml
+++ b/primary/k8s/service.yaml
@@ -1,15 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: service
+  name: primary
   labels:
-    app: service
+    app: primary
 spec:
   clusterIP: None
   ports:
-    - port: 50006
-      targetPort: 50006
+    - name: primary
       protocol: TCP
-      name: web-app
+      port: 50001
+      targetPort: 50001
   selector:
-    app: service
+    app: primary
